Project

General

Profile

Actions

Bug #11874

closed

File.realpath fail on volume mount point directory

Bug #11874: File.realpath fail on volume mount point directory

Added by personnel (Am I Who) over 10 years ago. Updated over 10 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 2.3.0p0 (2015-12-25 revision 53290) [x64-mingw32]
[ruby-core:72483]

Description

'C:\AAA' is a volume mount point.

When run "File.realpath 'C:\AAA'" it reports:
-e:1:in realpath': No such file or directory @ realpath_rec - C:/Volume{b0513fa8-eb82-4aa7-92f4-bafb0d0d9220} (Errno::ENOENT) from -e:1:in

'

ruby 2.3.0 adds HAVE_READLINK for windows then the bug appears

Updated by personnel (Am I Who) over 10 years ago Actions #1 [ruby-core:72757]

  • Description updated (diff)

Updated by personnel (Am I Who) over 10 years ago Actions #2 [ruby-core:72781]

  • Subject changed from ruby 2.3.0 fail to run when install under volume mount point directory to File.realpath fail on volume mount point directory
  • Description updated (diff)

Updated by personnel (Am I Who) over 10 years ago Actions #3 [ruby-core:72840]

  • Assignee deleted (nobu (Nobuyoshi Nakada))

Updated by personnel (Am I Who) over 10 years ago Actions #4 [ruby-core:73564]

  • Assignee set to nobu (Nobuyoshi Nakada)

Updated by usa (Usaku NAKAMURA) over 10 years ago Actions #5

  • Status changed from Open to Closed

Applied in changeset r53688.


  • win32/win32.c (fileattr_to_unixmode, rb_w32_reparse_symlink_p): volume
    mount point should be treated as directory, not symlink.
    [ruby-core:72483] [Bug #11874]

  • win32/win32.c (rb_w32_read_reparse_point): check the reparse point is
    a volume mount point or not.

  • win32/file.c (rb_readlink): follow above change (but this pass won't
    be used).

Updated by usa (Usaku NAKAMURA) over 10 years ago Actions #6 [ruby-core:74704]

  • Backport changed from 2.0.0: UNKNOWN, 2.1: UNKNOWN, 2.2: UNKNOWN, 2.3: UNKNOWN to 2.1: DONTNEED, 2.2: DONTNEED, 2.3: DONTNEED

Updated by usa (Usaku NAKAMURA) over 10 years ago Actions #7 [ruby-core:74705]

  • Backport changed from 2.1: DONTNEED, 2.2: DONTNEED, 2.3: DONTNEED to 2.1: DONTNEED, 2.2: DONTNEED, 2.3: REQUIRED

Updated by naruse (Yui NARUSE) over 10 years ago Actions #8 [ruby-core:74714]

  • Backport changed from 2.1: DONTNEED, 2.2: DONTNEED, 2.3: REQUIRED to 2.1: DONTNEED, 2.2: DONTNEED, 2.3: DONE

ruby_2_3 r54424 merged revision(s) 53688,53689,53690,53702.

Actions

Also available in: PDF Atom